--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "VoxelSpace",
 			"type": "cppvsdbg",
 			"request": "launch",
-			"program": "vs.exe",
+			"program": ".\\vs.exe",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}\\out",
