--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "shell",
 			"label": "Build VoxelSpace",
-			"command": "build.bat",
+			"command": ".\\build.bat",
 			"args": ["dbg", "sdlimage"],
 			"problemMatcher": [
 				"$msCompile"
