--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
 			"linux": {
 				"command": "./build.sh",
 				"args": ["dbg", "sdlimage"],
+				"detail": "compiler: gcc-like",
 				"problemMatcher": [
 					"$gcc"
 				]
@@ -14,10 +15,10 @@
 			"windows": {
 				"command": ".\\build.bat",
 				"args": ["dbg", "sdlimage"],
+				"detail": "compiler: cl.exe",
 				"problemMatcher": [
 					"$msCompile"
-				],
-				"detail": "compiler: cl.exe"
+				]
 			},
 			"presentation": {
 				"echo": false,
