More improvements + Initial overlay implementation; * Camera movement slowed down in gravitation mode; * Both build scripts fixed; * Optional modules moved to "src/modules"; * Cleanup.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}\\out",
 			"environment": [
-				{"name": "path", "value": "..\\SDL2\\lib\\x64;..\\SDL2_Image\\lib\\x64"}
+				{"name": "path", "value": "..\\SDL2\\lib\\x64;..\\SDL2_Image\\lib\\x64;..\\SDL2_ttf\\lib\\x64"}
 			],
 			"console": "integratedTerminal",
 			"preLaunchTask": "Build VoxelSpace"
