--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 			"label": "Build VoxelSpace",
 			"linux": {
 				"command": "./build.sh",
-				"args": ["dbg", "sdlimage","overlay"],
+				"args": ["dbg", "sdlimage","overlay", "threaded"],
 				"detail": "compiler: gcc-like",
 				"problemMatcher": [
 					"$gcc"
@@ -14,7 +14,7 @@
 			},
 			"windows": {
 				"command": ".\\build.bat",
-				"args": ["dbg", "sdlimage", "overlay"],
+				"args": ["dbg", "sdlimage", "overlay", "threaded"],
 				"detail": "compiler: cl.exe",
 				"problemMatcher": [
 					"$msCompile"
